# peptide-video

./: .gitignore  README.md  pyproject.toml  script.md
config/: project.yaml  render.yaml  scene_specs.yaml  style.yaml
output/: captions.srt  timeline.json
output/audio/: narration.txt
projects/doppler/: script.md
projects/doppler/blender/: rocket_star.py
projects/doppler/data/: __init__.py  equations.py
projects/doppler/scenes/: __init__.py  scene_01_intro.py  scene_02_classical.py  (+7 more)
projects/nested_learning/: script.md
projects/peptide_bonds/: script.md
scripts/: assemble.py  assemble_video.py  build.py  generate_tts.py  make_video.py  render_all.py  render_scene.py  sync_script.py
skewl/: .env.local.example  next.config.ts  package-lock.json  package.json
src/: __init__.py
src/chemistry/: __init__.py  atoms.py  bonds.py  charges.py  molecules.py  orbitals.py  reaction_coordinate.py
src/core/: __init__.py  blender_scene.py  camera.py  config.py  easing.py  labels.py  materials.py  scene_spec.py  script_parser.py  timeline.py
src/io/: __init__.py  blender_runner.py  ffmpeg_runner.py  manim_runner.py  placeholder_renderer.py  renderer.py  subtitle_writer.py
src/manim/: __init__.py  arrow_mobject.py  energy_diagram.py  equation_helpers.py  molecule_mobject.py  orbital_mobject.py  resonance_mobject.py  scene_base.py
src/scenes/: __init__.py  scene_01_intro.py  scene_02_reactants.py  scene_03_orbitals.py  scene_04_barrier.py  scene_05_attack.py  scene_06_water_loss.py  scene_07_resonance.py  scene_08_biology.py  scene_09_summary.py
(+34 files in other folders)
