[project]
name = "rabat"
version = "0.1.0"
description = "Framework for creating educational explainer videos using Manim, Blender, and multimedia assets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.26",
  "manim>=0.18.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
tts = [
  "openai>=1.6"
]

[tool.setuptools.packages.find]
include = ["src*"]
